HMAN-1100 code review comments